--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon.png">
   <meta name="theme-color" content="#ffffff">
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f5f5;
+    }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: white;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .logo {
+      max-height: 80px;
+      max-width: 150px;
+      height: auto;
+      width: auto;
+    }
+    .datos-empresa {
+      border: 1px solid #ccc;
+      padding: 1rem;
+      border-radius: 6px;
+      background-color: #f9f9f9;
+      font-size: 1rem;
+      line-height: 1.5;
+      max-width: 300px;
+    }
+    .container {
+      max-width: 700px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.4rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    label {
+      display: block;
+      margin-top: 0.5rem;
+      font-weight: bold;
+    }
+    .radio-group {
+      display: flex;
+      gap: 1rem;
+      margin-top: 0.5rem;
+    }
+    canvas {
+      display: block;
+      margin: 1rem 0;
+      background: #fff;
+      border: 1px solid #000;
+    }
+    button {
+      margin: 0.5rem;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    .center {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -20,8 +90,51 @@
         T: 973 988 139
       </div>
     </div>
+
     <h1>Formulario de Albarán - Alpitel ST</h1>
-    <!-- contenido del formulario omitido por brevedad -->
+    <form id="albaran-form">
+      <h2>Datos del Cliente</h2>
+      <input name="nombre" placeholder="Nombre" required>
+      <input name="apellidos" placeholder="Apellidos" required>
+      <input name="calle" placeholder="Calle" required>
+      <input name="numero" placeholder="Número" required>
+      <input name="piso" placeholder="Piso">
+      <input name="puerta" placeholder="Puerta">
+      <input name="cp" placeholder="Código Postal" required>
+      <input name="localidad" placeholder="Localidad" required>
+
+      <h2>Trabajo Realizado</h2>
+      <textarea name="trabajos" placeholder="Descripción de trabajos" required></textarea>
+      <textarea name="material" placeholder="Material utilizado"></textarea>
+      <label>Facturable:</label>
+      <div class="radio-group">
+        <label><input type="radio" name="facturable" value="si" required> Sí</label>
+        <label><input type="radio" name="facturable" value="no"> No</label>
+      </div>
+
+      <h2>Datos del Operario</h2>
+      <input name="operario" placeholder="Nombre del Operario" required>
+      <input name="tiempo" placeholder="Tiempo de operación" required>
+      <label>¿Hubo desplazamiento?</label>
+      <div class="radio-group">
+        <label><input type="radio" name="desplazamiento" value="si" required> Sí</label>
+        <label><input type="radio" name="desplazamiento" value="no"> No</label>
+      </div>
+
+      <h2>Firma del Cliente</h2>
+      <canvas id="signature-pad" width="300" height="150"></canvas>
+      <button type="button" onclick="clearSignature()">Borrar Firma</button>
+      <br><br>
+      <button type="submit">Guardar Albarán</button>
+    </form>
   </div>
+
+  <script>
+    function clearSignature() {
+      const canvas = document.getElementById("signature-pad");
+      const ctx = canvas.getContext("2d");
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+    }
+  </script>
 </body>
 </html>
