--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!-- Versión con cabecera rediseñada según boceto -->
+
+<!-- HTML generado final corregido: firma táctil funcional en iPhone + mailto -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Alpitel ST</title>
   <style>
     body {
@@ -44,20 +45,12 @@
       background: white;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h2 {
-      margin-top: 0;
-    }
     input, textarea {
       width: 100%;
       padding: 0.5rem;
       margin: 0.4rem 0;
       border: 1px solid #ccc;
       border-radius: 4px;
-    }
-    label {
-      display: block;
-      margin-top: 0.5rem;
-      font-weight: bold;
     }
     .radio-group {
       display: flex;
@@ -69,6 +62,9 @@
       margin: 1rem 0;
       background: #fff;
       border: 1px solid #000;
+      touch-action: none;
+      width: 100%;
+      height: 150px;
     }
     button {
       margin: 0.5rem;
@@ -76,23 +72,7 @@
       font-size: 1rem;
       cursor: pointer;
     }
-    .albaran-card {
-      border: 1px solid #ccc;
-      padding: 1rem;
-      margin: 1rem 0;
-      background: #fafafa;
-      border-radius: 5px;
-    }
-    .albaran-card p {
-      margin: 0.3rem 0;
-    }
-    .center {
-      text-align: center;
-    }
   </style>
-  <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="icon.png">
-  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div class="container">
@@ -106,6 +86,7 @@
         T: 973 988 139
       </div>
     </div>
+
     <h1>Formulario de Albarán - Alpitel ST</h1>
     <form id="albaran-form">
       <h2>Datos del Cliente</h2>
@@ -144,39 +125,67 @@
     </form>
   </div>
 
-  <div class="container center">
-    <button onclick="enviarAlbaranesAlServidor()">Enviar todos los albaranes al servidor</button>
-    <button onclick="mostrarAlbaranesGuardados()">Ver albaranes guardados localmente</button>
-  </div>
-
-  <div class="container" id="lista-albaranes" style="display:none;">
-    <h2>Albaranes Guardados</h2>
-    <div id="albaranes-output"></div>
-  </div>
-
   <script>
-    function clearSignature() {
-      const canvas = document.getElementById("signature-pad");
-      if (canvas) {
-        const ctx = canvas.getContext("2d");
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
+    const canvas = document.getElementById("signature-pad");
+    const ctx = canvas.getContext("2d");
+    let drawing = false;
+
+    canvas.addEventListener("mousedown", e => {
+      drawing = true;
+      ctx.beginPath();
+      ctx.moveTo(e.offsetX, e.offsetY);
+    });
+
+    canvas.addEventListener("mousemove", e => {
+      if (drawing) {
+        ctx.lineTo(e.offsetX, e.offsetY);
+        ctx.stroke();
       }
-    }
+    });
 
-    document.getElementById("clear-signature").addEventListener("click", clearSignature);
-  </script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('service-worker.js')
-          .then(registration => {
-            console.log('ServiceWorker registrado con éxito:', registration.scope);
-          })
-          .catch(error => {
-            console.log('Fallo al registrar el ServiceWorker:', error);
-          });
-      });
-    }
+    canvas.addEventListener("mouseup", () => drawing = false);
+    canvas.addEventListener("mouseout", () => drawing = false);
+
+    canvas.addEventListener("touchstart", e => {
+      e.preventDefault();
+      const rect = canvas.getBoundingClientRect();
+      const touch = e.touches[0];
+      drawing = true;
+      ctx.beginPath();
+      ctx.moveTo(touch.clientX - rect.left, touch.clientY - rect.top);
+    }, { passive: false });
+
+    canvas.addEventListener("touchmove", e => {
+      e.preventDefault();
+      if (!drawing) return;
+      const rect = canvas.getBoundingClientRect();
+      const touch = e.touches[0];
+      ctx.lineTo(touch.clientX - rect.left, touch.clientY - rect.top);
+      ctx.stroke();
+    }, { passive: false });
+
+    canvas.addEventListener("touchend", () => drawing = false);
+
+    document.getElementById("clear-signature").addEventListener("click", () => {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+    });
+
+    document.getElementById("albaran-form").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      let body = "";
+
+      for (let [key, value] of formData.entries()) {
+        body += `${key}: ${value}\n`;
+      }
+
+      const firma = canvas.toDataURL("image/png");
+      body += "\nFirma (base64):\n" + firma;
+
+      const mailtoLink = `mailto:pedrinterremoto@gmail.com?subject=Nuevo Albarán Alpitel&body=${encodeURIComponent(body)}`;
+      const win = window.open(mailtoLink);
+      if (!win) alert("No se pudo abrir el cliente de correo. Copia manualmente los datos.");
+    });
   </script>
 </body>
 </html>
