--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
+<!-- Versión con cabecera rediseñada y estilo moderno -->
 <!DOCTYPE html>
 <html lang="es">
-<!-- contenido copiado directamente del canvas omitido por brevedad --> 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alpitel ST</title>
+  <style>
+    :root {
+      --primary: #0057a0;
+      --accent: #33a1fd;
+      --bg-light: #eef3f8;
+      --text-dark: #222;
+      --border: #c2d2e3;
+    }
+    /* ... resto del CSS ... */
+  </style>
+</head>
+<body>
+  <!-- ... resto del HTML ... -->
+</body>
 </html>
